welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: object toInt is not a member of package ch
		var p : Int = ch.toInt(litMessage())
                                 ^Array2:22: error: not found: value setBrosseCouleur
	setBrosseCouleur(k + p)
        ^