welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {
	var T = new Array [Color](getWorldHeight())
	
	if(!estFaceMur){
		for (i <- 0 to (getWorldHeight()-2)) {
		T(i) = getCouleurSol();
		avance();
		}
	}
	if(estFaceMur){
		for (i <- 0 to (getWorldHeight()-2)){
		recule();
	}
	}
	gauche();avance();droite();

	baisseBrosse();
	for (k<-0 to getWorldHeight()-1){
		var p : Int = ch.toInt(litMessage())
	setBrosseCouleur(k + p)
	avance();
	}

	 

	
}
